updated environment generation

--- a/notebooks/recordings/1 - Generate recordings stats.ipynb
+++ b/notebooks/recordings/1 - Generate recordings stats.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "5daef15c-82f4-4e3e-b256-c0e53ab05ec5",
    "metadata": {
     "execution": {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "b85b2e7d-266b-48b3-a9b5-b1d95615676c",
    "metadata": {
     "execution": {
@@ -99,8 +99,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-12 23:50:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
-      "2024-05-12 23:50:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
+      "2024-05-18 23:56:20 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
+      "2024-05-18 23:56:20 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
@@ -136,13 +136,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-12 23:50:45 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 503 files\n",
-      "processing 503 audio files |██████████████████████████████████████████████████| 100.0% \n"
+      "2024-05-18 23:56:21 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 508 files\n",
+      "processing 508 audio files |██████████████████████████████████████████████████| 100.0% \n"
      ]
     }
    ],
    "source": [
-    "# load patsh to all audio files from wiadomości do Henryczka\n",
+    "# load paths to all audio files from wiadomości do Henryczka\n",
     "df = recordings.get_recordings_info(path_recordings=DIR_WIADOMOSCI_DO_HENRYCZKA)"
    ]
   },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {
     "execution": {
@@ -188,9 +188,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
