updated to fix issues with index

--- a/notebooks/recordings/3 - Transcribe recordings.ipynb
+++ b/notebooks/recordings/3 - Transcribe recordings.ipynb
@@ -20,15 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "5a5c8bb7-b155-4e46-bd24-f0bee9422a63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:52:19.442203Z",
-     "iopub.status.busy": "2024-05-12T23:52:19.441854Z",
-     "iopub.status.idle": "2024-05-12T23:52:19.483024Z",
-     "shell.execute_reply": "2024-05-12T23:52:19.482498Z",
-     "shell.execute_reply.started": "2024-05-12T23:52:19.442182Z"
+     "iopub.execute_input": "2024-05-20T02:03:27.070589Z",
+     "iopub.status.busy": "2024-05-20T02:03:27.070112Z",
+     "iopub.status.idle": "2024-05-20T02:03:27.083050Z",
+     "shell.execute_reply": "2024-05-20T02:03:27.082534Z",
+     "shell.execute_reply.started": "2024-05-20T02:03:27.070569Z"
     },
     "tags": []
    },
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "7a299954-a131-4796-bad5-c9b53d0eb8cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:52:20.545917Z",
-     "iopub.status.busy": "2024-05-12T23:52:20.545578Z",
-     "iopub.status.idle": "2024-05-12T23:52:20.579893Z",
-     "shell.execute_reply": "2024-05-12T23:52:20.579085Z",
-     "shell.execute_reply.started": "2024-05-12T23:52:20.545895Z"
+     "iopub.execute_input": "2024-05-20T02:03:28.438334Z",
+     "iopub.status.busy": "2024-05-20T02:03:28.438125Z",
+     "iopub.status.idle": "2024-05-20T02:03:29.679505Z",
+     "shell.execute_reply": "2024-05-20T02:03:29.678908Z",
+     "shell.execute_reply.started": "2024-05-20T02:03:28.438316Z"
     }
    },
    "outputs": [],
@@ -77,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "170fe65c-d43d-4157-9473-29a7a25b8d4f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:52:22.022536Z",
-     "iopub.status.busy": "2024-05-12T23:52:22.022092Z",
-     "iopub.status.idle": "2024-05-12T23:52:22.059127Z",
-     "shell.execute_reply": "2024-05-12T23:52:22.058559Z",
-     "shell.execute_reply.started": "2024-05-12T23:52:22.022516Z"
+     "iopub.execute_input": "2024-05-20T02:13:35.042992Z",
+     "iopub.status.busy": "2024-05-20T02:13:35.042684Z",
+     "iopub.status.idle": "2024-05-20T02:13:35.071382Z",
+     "shell.execute_reply": "2024-05-20T02:13:35.070816Z",
+     "shell.execute_reply.started": "2024-05-20T02:13:35.042974Z"
     }
    },
    "outputs": [],
@@ -96,7 +96,7 @@
     "\n",
     "# retrieve new token by opening 'https://webhook.site/' in incognito mode\n",
     "# and picking up the token from the URL\n",
-    "WEBHOOKS_TOKEN_ID = '035fb8e4-5260-4e10-9e86-5782fb3bb352'\n",
+    "WEBHOOKS_TOKEN_ID = '69109a84-4073-4747-839d-81df514a77c0'\n",
     "GOODTAPE_API_KEY = os.getenv(\"GOODTAPE_API_KEY\")"
    ]
   },
@@ -110,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "f59bfa37-d829-44eb-930c-29d56d91c092",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:52:25.138089Z",
-     "iopub.status.busy": "2024-05-12T23:52:25.137741Z",
-     "iopub.status.idle": "2024-05-12T23:52:43.369620Z",
-     "shell.execute_reply": "2024-05-12T23:52:43.369123Z",
-     "shell.execute_reply.started": "2024-05-12T23:52:25.138069Z"
+     "iopub.execute_input": "2024-05-20T02:17:56.813100Z",
+     "iopub.status.busy": "2024-05-20T02:17:56.812842Z",
+     "iopub.status.idle": "2024-05-20T02:18:15.065452Z",
+     "shell.execute_reply": "2024-05-20T02:18:15.064930Z",
+     "shell.execute_reply.started": "2024-05-20T02:17:56.813079Z"
     }
    },
    "outputs": [
@@ -126,8 +126,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-12 23:52:25 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 503 files\n",
-      "processing 503 audio files |██████████████████████████████████████████████████| 100.0% \n"
+      "2024-05-20 02:17:57 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 508 files\n",
+      "processing 508 audio files |██████████████████████████████████████████████████| 100.0% \n"
      ]
     }
    ],
@@ -165,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "6fd0deda-025c-49b8-b4d6-d5d2cda26e1a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:52:46.054826Z",
-     "iopub.status.busy": "2024-05-12T23:52:46.054507Z",
-     "iopub.status.idle": "2024-05-12T23:52:59.304596Z",
-     "shell.execute_reply": "2024-05-12T23:52:59.303891Z",
-     "shell.execute_reply.started": "2024-05-12T23:52:46.054807Z"
+     "iopub.execute_input": "2024-05-20T02:21:43.104756Z",
+     "iopub.status.busy": "2024-05-20T02:21:43.104360Z",
+     "iopub.status.idle": "2024-05-20T02:21:43.177267Z",
+     "shell.execute_reply": "2024-05-20T02:21:43.176525Z",
+     "shell.execute_reply.started": "2024-05-20T02:21:43.104736Z"
     }
    },
    "outputs": [
@@ -181,12 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing [78]: Henryk 2024-05-05 Tatuś opowiada o festynie a Kaudipteryks przechwala się ogonem.m4a\n",
-      "processing [79]: Henryk 2024-05-06 Tatuś opowiada o rekrutacji a Megaterium to największy ssak na ziemi.m4a\n",
-      "processing [80]: Henryk 2024-05-08 Tatuś opowiada o robieniu komputera do obliczeń a Ceratopsy gonią złodzieja jaj...\n",
-      "processing [81]: Henryk 2024-05-10 Tatuś opowiada o miejscach do których pójdziemy a Ichtiozaury zmieniają zwycza...\n",
-      "processing [85]: Rodzice Henryk 2024-05-05 Nagranie z wycieczki babci i dziadka.m4a\n",
-      "submitted 5 recordings to the transcription service GoodTape\n"
+      "submitted 0 recordings to the transcription service GoodTape\n"
      ]
     }
    ],
@@ -197,7 +192,6 @@
     "    webhooks_token_id=WEBHOOKS_TOKEN_ID,\n",
     "    goodtape_api_key=GOODTAPE_API_KEY,\n",
     "    path_recordings=DIR_WIADOMOSCI_DO_HENRYCZKA,\n",
-    "    start=0, stop=510,\n",
     "    verbose=False\n",
     ")"
    ]
@@ -238,15 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "176457da-a7af-4861-9f67-6cc191c21151",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:58:51.832569Z",
-     "iopub.status.busy": "2024-05-12T23:58:51.832030Z",
-     "iopub.status.idle": "2024-05-12T23:58:59.931358Z",
-     "shell.execute_reply": "2024-05-12T23:58:59.930652Z",
-     "shell.execute_reply.started": "2024-05-12T23:58:51.832549Z"
+     "iopub.execute_input": "2024-05-20T02:08:59.680686Z",
+     "iopub.status.busy": "2024-05-20T02:08:59.680348Z",
+     "iopub.status.idle": "2024-05-20T02:09:05.947437Z",
+     "shell.execute_reply": "2024-05-20T02:09:05.946791Z",
+     "shell.execute_reply.started": "2024-05-20T02:08:59.680664Z"
     }
    },
    "outputs": [
@@ -254,14 +248,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found 4 requests to fetch\n",
-      "retrieved transcription [0]: abef8eb5-1c43-461c-ac09-10dc35ac691b -> file [81]: Henryk 2024-05-10 Tatuś opowiada o miejscach do których pójdz...\n",
-      "retrieved transcription [1]: b575370a-df1c-43e5-8922-0ca9dad3efa4 -> file [85]: Rodzice Henryk 2024-05-05 Nagranie z wycieczki babci i dziadka.m...\n",
-      "retrieved transcription [2]: 2ff72b9b-9f61-44ba-883b-192303965060 -> file [79]: Henryk 2024-05-06 Tatuś opowiada o rekrutacji a Megaterium to n...\n",
-      "retrieved transcription [3]: b799e08c-b412-4fa2-a204-faac598c36f7 -> file [80]: Henryk 2024-05-08 Tatuś opowiada o robieniu komputera do oblicz...\n",
-      "4 transcriptions were retrieved\n",
-      "processing 503 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
-      "4 new transcriptions were processed, there are 503 txt and 503 doc transcriptions available\n"
+      "found 1 requests to fetch\n",
+      "retrieved transcription [0]: 4c9b51f7-ca18-41fe-aa60-9bea29f060cc -> file [86]: Henryk 2024-05-17 Tatuś opowiada o zabawie z Hanią Tygrys Szab...\n",
+      "1 transcriptions were retrieved\n",
+      "processing 508 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
+      "1 new transcriptions were processed, there are 503 txt and 503 doc transcriptions available\n"
      ]
     }
    ],
@@ -298,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "f2446222-fb6f-4d14-be7f-2500841239e5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:59:07.110156Z",
-     "iopub.status.busy": "2024-05-12T23:59:07.109826Z",
-     "iopub.status.idle": "2024-05-12T23:59:08.682112Z",
-     "shell.execute_reply": "2024-05-12T23:59:08.681511Z",
-     "shell.execute_reply.started": "2024-05-12T23:59:07.110135Z"
+     "iopub.execute_input": "2024-05-20T02:09:19.352681Z",
+     "iopub.status.busy": "2024-05-20T02:09:19.352475Z",
+     "iopub.status.idle": "2024-05-20T02:09:21.637026Z",
+     "shell.execute_reply": "2024-05-20T02:09:21.636517Z",
+     "shell.execute_reply.started": "2024-05-20T02:09:19.352665Z"
     }
    },
    "outputs": [
@@ -314,9 +305,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "verifying 503 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
-      "there are 503 processed and valid transcriptions\n",
-      "\u001b[22m\u001b[49m\u001b[92m*** all 503 recordings were transcribed ***\u001b[0m\n"
+      "verifying 508 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
+      "there are 508 processed and valid transcriptions\n",
+      "\u001b[22m\u001b[49m\u001b[92m*** all 508 recordings were transcribed ***\u001b[0m\n"
      ]
     }
    ],
@@ -332,6 +323,14 @@
     "# save transcription log\n",
     "df_transcriptions_to_write.to_csv(FILE_TRANSCRIPTION_CSV, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37fdb755-ecfc-4c7f-806d-f713a45a8c01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
