updated with ChatGPT prompt for recordings classification

--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Generate Recordings Descriptions\n",
-    "This service will use ChatGPT to read the recordings transcriptions and will generate meaningful description for every recording"
+    "This service will use ChatGPT to read the recordings transcriptions and will generate meaningful description for every recording\n",
+    "\n",
+    "This notebook will also query ChatGPT to provide classification of the recordings according [to the schema](../../references/ChatGPT_Prompts.md)"
    ]
   },
   {
