updated henryk recording stats

--- a/notebooks/recordings/1 - Generate recordings stats.ipynb
+++ b/notebooks/recordings/1 - Generate recordings stats.ipynb
@@ -23,11 +23,11 @@
    "id": "5daef15c-82f4-4e3e-b256-c0e53ab05ec5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:50:39.364540Z",
-     "iopub.status.busy": "2024-05-12T23:50:39.363849Z",
-     "iopub.status.idle": "2024-05-12T23:50:39.414405Z",
-     "shell.execute_reply": "2024-05-12T23:50:39.413762Z",
-     "shell.execute_reply.started": "2024-05-12T23:50:39.364519Z"
+     "iopub.execute_input": "2024-06-04T09:26:41.302261Z",
+     "iopub.status.busy": "2024-06-04T09:26:41.301894Z",
+     "iopub.status.idle": "2024-06-04T09:26:41.352298Z",
+     "shell.execute_reply": "2024-06-04T09:26:41.350930Z",
+     "shell.execute_reply.started": "2024-06-04T09:26:41.302221Z"
     },
     "tags": []
    },
@@ -43,11 +43,11 @@
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:50:40.372318Z",
-     "iopub.status.busy": "2024-05-12T23:50:40.372108Z",
-     "iopub.status.idle": "2024-05-12T23:50:40.401305Z",
-     "shell.execute_reply": "2024-05-12T23:50:40.400104Z",
-     "shell.execute_reply.started": "2024-05-12T23:50:40.372302Z"
+     "iopub.execute_input": "2024-06-04T09:26:41.354790Z",
+     "iopub.status.busy": "2024-06-04T09:26:41.354066Z",
+     "iopub.status.idle": "2024-06-04T09:26:42.894628Z",
+     "shell.execute_reply": "2024-06-04T09:26:42.893663Z",
+     "shell.execute_reply.started": "2024-06-04T09:26:41.354746Z"
     },
     "tags": []
    },
@@ -87,11 +87,11 @@
    "id": "b85b2e7d-266b-48b3-a9b5-b1d95615676c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:50:42.081994Z",
-     "iopub.status.busy": "2024-05-12T23:50:42.081488Z",
-     "iopub.status.idle": "2024-05-12T23:50:42.109312Z",
-     "shell.execute_reply": "2024-05-12T23:50:42.108375Z",
-     "shell.execute_reply.started": "2024-05-12T23:50:42.081975Z"
+     "iopub.execute_input": "2024-06-04T09:26:42.896739Z",
+     "iopub.status.busy": "2024-06-04T09:26:42.896048Z",
+     "iopub.status.idle": "2024-06-04T09:26:42.925878Z",
+     "shell.execute_reply": "2024-06-04T09:26:42.924737Z",
+     "shell.execute_reply.started": "2024-06-04T09:26:42.896698Z"
     }
    },
    "outputs": [
@@ -99,8 +99,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-18 23:56:20 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
-      "2024-05-18 23:56:20 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
+      "2024-06-04 09:26:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
+      "2024-06-04 09:26:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
      ]
     }
    ],
@@ -124,11 +124,11 @@
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:50:44.821383Z",
-     "iopub.status.busy": "2024-05-12T23:50:44.821078Z",
-     "iopub.status.idle": "2024-05-12T23:51:03.826062Z",
-     "shell.execute_reply": "2024-05-12T23:51:03.825538Z",
-     "shell.execute_reply.started": "2024-05-12T23:50:44.821359Z"
+     "iopub.execute_input": "2024-06-04T09:26:42.931029Z",
+     "iopub.status.busy": "2024-06-04T09:26:42.930219Z",
+     "iopub.status.idle": "2024-06-04T09:27:35.581826Z",
+     "shell.execute_reply": "2024-06-04T09:27:35.579793Z",
+     "shell.execute_reply.started": "2024-06-04T09:26:42.930964Z"
     }
    },
    "outputs": [
@@ -136,8 +136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-18 23:56:21 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 508 files\n",
-      "processing 508 audio files |██████████████████████████████████████████████████| 100.0% \n"
+      "2024-06-04 09:26:44 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 520 files\n",
+      "processing 520 audio files |██████████████████████████████████████████████████| 100.0% \n"
      ]
     }
    ],
@@ -160,11 +160,11 @@
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-12T23:51:58.427564Z",
-     "iopub.status.busy": "2024-05-12T23:51:58.427106Z",
-     "iopub.status.idle": "2024-05-12T23:51:58.472981Z",
-     "shell.execute_reply": "2024-05-12T23:51:58.472432Z",
-     "shell.execute_reply.started": "2024-05-12T23:51:58.427545Z"
+     "iopub.execute_input": "2024-06-04T09:27:35.588077Z",
+     "iopub.status.busy": "2024-06-04T09:27:35.583425Z",
+     "iopub.status.idle": "2024-06-04T09:27:35.674972Z",
+     "shell.execute_reply": "2024-06-04T09:27:35.673405Z",
+     "shell.execute_reply.started": "2024-06-04T09:27:35.588020Z"
     }
    },
    "outputs": [],
@@ -188,9 +188,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
