updated makefile to newest version

--- a/notebooks/recordings/1 - Generate recordings stats.ipynb
+++ b/notebooks/recordings/1 - Generate recordings stats.ipynb
@@ -171,7 +171,7 @@
    "source": [
     "# save to csv\n",
     "df.sort_values('date', inplace=True)\n",
-    "df.to_csv(FILE_AUDIO_STATS_CSV, index=False)"
+    "df.to_parquet(FILE_AUDIO_STATS_PARQUET, index=False)"
    ]
   },
   {
