refactored the transcription func - it produces parquet file db

--- a/notebooks/recordings/1 - Generate recordings stats.ipynb
+++ b/notebooks/recordings/1 - Generate recordings stats.ipynb
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "5daef15c-82f4-4e3e-b256-c0e53ab05ec5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-04T09:26:41.302261Z",
-     "iopub.status.busy": "2024-06-04T09:26:41.301894Z",
-     "iopub.status.idle": "2024-06-04T09:26:41.352298Z",
-     "shell.execute_reply": "2024-06-04T09:26:41.350930Z",
-     "shell.execute_reply.started": "2024-06-04T09:26:41.302221Z"
+     "iopub.execute_input": "2024-06-20T20:44:20.036101Z",
+     "iopub.status.busy": "2024-06-20T20:44:20.035507Z",
+     "iopub.status.idle": "2024-06-20T20:44:20.105338Z",
+     "shell.execute_reply": "2024-06-20T20:44:20.104176Z",
+     "shell.execute_reply.started": "2024-06-20T20:44:20.036058Z"
     },
     "tags": []
    },
@@ -39,15 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-04T09:26:41.354790Z",
-     "iopub.status.busy": "2024-06-04T09:26:41.354066Z",
-     "iopub.status.idle": "2024-06-04T09:26:42.894628Z",
-     "shell.execute_reply": "2024-06-04T09:26:42.893663Z",
-     "shell.execute_reply.started": "2024-06-04T09:26:41.354746Z"
+     "iopub.execute_input": "2024-06-20T20:44:21.464700Z",
+     "iopub.status.busy": "2024-06-20T20:44:21.463884Z",
+     "iopub.status.idle": "2024-06-20T20:44:21.544932Z",
+     "shell.execute_reply": "2024-06-20T20:44:21.543572Z",
+     "shell.execute_reply.started": "2024-06-20T20:44:21.464643Z"
     },
     "tags": []
    },
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "b85b2e7d-266b-48b3-a9b5-b1d95615676c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-04T09:26:42.896739Z",
-     "iopub.status.busy": "2024-06-04T09:26:42.896048Z",
-     "iopub.status.idle": "2024-06-04T09:26:42.925878Z",
-     "shell.execute_reply": "2024-06-04T09:26:42.924737Z",
-     "shell.execute_reply.started": "2024-06-04T09:26:42.896698Z"
+     "iopub.execute_input": "2024-06-20T20:44:29.411438Z",
+     "iopub.status.busy": "2024-06-20T20:44:29.411085Z",
+     "iopub.status.idle": "2024-06-20T20:44:29.445037Z",
+     "shell.execute_reply": "2024-06-20T20:44:29.443783Z",
+     "shell.execute_reply.started": "2024-06-20T20:44:29.411408Z"
     }
    },
    "outputs": [
@@ -99,15 +99,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-04 09:26:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
-      "2024-06-04 09:26:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
+      "2024-06-20 20:44:29 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using parquet file: ../../data/processed/henryk_recordings.parquet\n",
+      "2024-06-20 20:44:29 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
      ]
     }
    ],
    "source": [
     "# params\n",
-    "logger.info(f\"using csv file: {FILE_AUDIO_STATS_CSV}\")\n",
-    "logger.info(f\"using audio files path: {DIR_WIADOMOSCI_DO_HENRYCZKA}\")"
+    "logger.info(f\"using parquet file: {FILE_RECORDINGS_STATS_PARQUET}\")\n",
+    "logger.info(f\"using audio files path: {DIR_RECORDINGS}\")"
    ]
   },
   {
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-04T09:26:42.931029Z",
-     "iopub.status.busy": "2024-06-04T09:26:42.930219Z",
-     "iopub.status.idle": "2024-06-04T09:27:35.581826Z",
-     "shell.execute_reply": "2024-06-04T09:27:35.579793Z",
-     "shell.execute_reply.started": "2024-06-04T09:26:42.930964Z"
+     "iopub.execute_input": "2024-06-20T20:51:41.770390Z",
+     "iopub.status.busy": "2024-06-20T20:51:41.770029Z",
+     "iopub.status.idle": "2024-06-20T20:52:25.763096Z",
+     "shell.execute_reply": "2024-06-20T20:52:25.761699Z",
+     "shell.execute_reply.started": "2024-06-20T20:51:41.770363Z"
     }
    },
    "outputs": [
@@ -136,14 +136,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-04 09:26:44 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 520 files\n",
-      "processing 520 audio files |██████████████████████████████████████████████████| 100.0% \n"
+      "2024-06-20 20:51:42 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 528 files\n",
+      "processing 528 audio files |██████████████████████████████████████████████████| 100.0% \n",
+      "2024-06-20 20:52:25 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - generated stats for 528 audio recordings\n"
      ]
     }
    ],
    "source": [
     "# load paths to all audio files from wiadomości do Henryczka\n",
-    "df = recordings.get_recordings_info(path_recordings=DIR_WIADOMOSCI_DO_HENRYCZKA)"
+    "df = recordings.get_recordings_info(path_recordings=DIR_RECORDINGS)"
    ]
   },
   {
@@ -156,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-04T09:27:35.588077Z",
-     "iopub.status.busy": "2024-06-04T09:27:35.583425Z",
-     "iopub.status.idle": "2024-06-04T09:27:35.674972Z",
-     "shell.execute_reply": "2024-06-04T09:27:35.673405Z",
-     "shell.execute_reply.started": "2024-06-04T09:27:35.588020Z"
+     "iopub.execute_input": "2024-06-20T20:53:09.037939Z",
+     "iopub.status.busy": "2024-06-20T20:53:09.037583Z",
+     "iopub.status.idle": "2024-06-20T20:53:09.082590Z",
+     "shell.execute_reply": "2024-06-20T20:53:09.081193Z",
+     "shell.execute_reply.started": "2024-06-20T20:53:09.037907Z"
     }
    },
    "outputs": [],
    "source": [
     "# save to csv\n",
     "df.sort_values('date', inplace=True)\n",
-    "df.to_parquet(FILE_AUDIO_STATS_PARQUET, index=False)"
+    "df.to_parquet(FILE_RECORDINGS_STATS_PARQUET, index=False)"
    ]
   },
   {
